// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Welcome should render empty state 1`] = `
<DocumentFragment>
  <div
    class="relative flex flex-col min-h-screen bg-theme-neutral-contrast"
  >
    <nav
      aria-labelledby="main menu"
      class="sc-fzoyAV bqFbiw"
    >
      <div
        class="px-4 sm:px-6 lg:px-"
      >
        <div
          class="relative flex justify-between h-20 md:h-24"
        >
          <div
            class="flex items-center flex-shrink-0"
          >
            <div
              class="flex p-2 mr-4 rounded-lg bg-logo"
            >
              <img
                alt="ARK Logo"
                class="h-6 md:h-8 lg:h-10"
                src="ark-logo.png"
              />
            </div>
            <ul
              class="flex h-20 md:h-24"
            >
              <li
                class="flex"
              >
                <a
                  class="flex items-center mx-4 font-bold text-md text-theme-neutral"
                  href="/profiles/qwe123/dashboard"
                  title="Portfolio"
                >
                  Portfolio
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  class="flex items-center mx-4 font-bold text-md text-theme-neutral"
                  href="/profiles/qwe123/plugins"
                  title="Plugins"
                >
                  Plugins
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  class="flex items-center mx-4 font-bold text-md text-theme-neutral"
                  href="/profiles/qwe123/exchange"
                  title="Exchange"
                >
                  Exchange
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  class="flex items-center mx-4 font-bold text-md text-theme-neutral"
                  href="/profiles/qwe123/news"
                  title="News"
                >
                  News
                </a>
              </li>
            </ul>
          </div>
          <div
            class="flex items-center"
          >
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="flex items-center h-full px-6 cursor-pointer text-theme-primary-300"
              >
                <div
                  class="sc-AxirZ hmuEJr"
                  height="22"
                  width="22"
                >
                  <svg>
                    notification.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="flex items-center h-full px-6 cursor-pointer text-theme-primary-300"
            >
              <div
                class="sc-AxirZ hmuEJr"
                height="22"
                width="22"
              >
                <svg>
                  sent.svg
                </svg>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="flex items-center h-full px-6 cursor-pointer text-theme-primary-300"
            >
              <div
                class="sc-AxirZ hmuEJr"
                height="22"
                width="22"
              >
                <svg>
                  receive.svg
                </svg>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="p-2 ml-4 text-right"
            >
              <div
                class="text-xs text-theme-neutral"
              >
                Your balance
              </div>
              <div
                class="text-sm font-bold text-theme-neutral-dark"
              />
            </div>
            <div
              class="flex p-1 cusror-pointer"
            >
              <div
                class="relative"
                data-testid="dropdown__toggle"
              >
                <div
                  class="cursor-pointer"
                  data-testid="navbar__useractions"
                >
                  <div
                    class="sc-fznyAO hUVUQM -mr-1 border-theme-neutral-300"
                  >
                    <span
                      class="text-theme-neutral-600"
                    >
                      <div
                        class="sc-AxirZ iQaTP"
                        height="1em"
                        width="1em"
                      >
                        <svg>
                          btc.svg
                        </svg>
                      </div>
                    </span>
                  </div>
                  <div
                    class="sc-fznyAO hUVUQM relative bg-theme-primary border-theme-primary rotate-90"
                  >
                    <span
                      class="text-sm text-theme-background"
                    />
                    <span
                      class="sc-fzplWN dtBkxc flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent transform  bg-theme-primary-contrast border-theme-primary-contrast text-theme-primary-500"
                    >
                      <div
                        class="sc-AxirZ fttODj"
                        height="10"
                        width="10"
                      >
                        <svg>
                          chevron-down.svg
                        </svg>
                      </div>
                      <span />
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-col flex-1 space-y-5 mt-5"
    >
      <div
        class="sc-fzoLag fvqzEZ"
      >
        <div
          class="container py-16 mx-auto px-14"
        >
          <div
            class="flex items-end justify-between bg-theme-background"
          >
            <div>
              <h1
                class="mb-0 md:text-4xl"
                data-testid="header__title"
              >
                My Registrations
              </h1>
              <div
                class="text-theme-neutral-dark"
                data-testid="header__subtitle"
              >
                You can register a Delagate, Business and Bridgechain.
              </div>
            </div>
            <div>
              <div
                class="flex justify-end divide-theme-neutral-300 space-x-10 divide-x"
              >
                <div
                  class="relative"
                >
                  <button
                    class="h-full my-auto font-semibold cursor-pointer text-theme-primary-light"
                    data-testid="header-search-bar__button"
                  >
                    <div
                      class="flex items-center space-x-3"
                    >
                      <span>
                        Search
                      </span>
                      <div
                        class="sc-AxirZ eEbZjj"
                        height="20"
                        width="20"
                      >
                        <svg>
                          search.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
                <div
                  class="pl-10"
                >
                  <button
                    class="sc-AxjAm ddQVWI"
                    color="primary"
                    type="button"
                  >
                    Register
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="sc-fzoLag fvqzEZ flex-1"
      >
        <div
          class="container py-16 mx-auto px-14"
        >
          <div
            class="text-center"
            data-testid="my-registrations__empty-state"
          >
            <svg
              class="mx-auto"
            >
              register-banner.svg
            </svg>
            <div
              class="mt-8 text-theme-neutral-dark"
            >
              Register Business, Bridgechain and Delegate in the most convenient way.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Welcome should render null for a not knwown type of table 1`] = `
<DocumentFragment>
  <div
    class="relative flex flex-col min-h-screen bg-theme-neutral-contrast"
  >
    <nav
      aria-labelledby="main menu"
      class="sc-fzoyAV bqFbiw"
    >
      <div
        class="px-4 sm:px-6 lg:px-"
      >
        <div
          class="relative flex justify-between h-20 md:h-24"
        >
          <div
            class="flex items-center flex-shrink-0"
          >
            <div
              class="flex p-2 mr-4 rounded-lg bg-logo"
            >
              <img
                alt="ARK Logo"
                class="h-6 md:h-8 lg:h-10"
                src="ark-logo.png"
              />
            </div>
            <ul
              class="flex h-20 md:h-24"
            >
              <li
                class="flex"
              >
                <a
                  class="flex items-center mx-4 font-bold text-md text-theme-neutral"
                  href="/profiles/qwe123/dashboard"
                  title="Portfolio"
                >
                  Portfolio
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  class="flex items-center mx-4 font-bold text-md text-theme-neutral"
                  href="/profiles/qwe123/plugins"
                  title="Plugins"
                >
                  Plugins
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  class="flex items-center mx-4 font-bold text-md text-theme-neutral"
                  href="/profiles/qwe123/exchange"
                  title="Exchange"
                >
                  Exchange
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  class="flex items-center mx-4 font-bold text-md text-theme-neutral"
                  href="/profiles/qwe123/news"
                  title="News"
                >
                  News
                </a>
              </li>
            </ul>
          </div>
          <div
            class="flex items-center"
          >
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="flex items-center h-full px-6 cursor-pointer text-theme-primary-300"
              >
                <div
                  class="sc-AxirZ hmuEJr"
                  height="22"
                  width="22"
                >
                  <svg>
                    notification.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="flex items-center h-full px-6 cursor-pointer text-theme-primary-300"
            >
              <div
                class="sc-AxirZ hmuEJr"
                height="22"
                width="22"
              >
                <svg>
                  sent.svg
                </svg>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="flex items-center h-full px-6 cursor-pointer text-theme-primary-300"
            >
              <div
                class="sc-AxirZ hmuEJr"
                height="22"
                width="22"
              >
                <svg>
                  receive.svg
                </svg>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="p-2 ml-4 text-right"
            >
              <div
                class="text-xs text-theme-neutral"
              >
                Your balance
              </div>
              <div
                class="text-sm font-bold text-theme-neutral-dark"
              />
            </div>
            <div
              class="flex p-1 cusror-pointer"
            >
              <div
                class="relative"
                data-testid="dropdown__toggle"
              >
                <div
                  class="cursor-pointer"
                  data-testid="navbar__useractions"
                >
                  <div
                    class="sc-fznyAO hUVUQM -mr-1 border-theme-neutral-300"
                  >
                    <span
                      class="text-theme-neutral-600"
                    >
                      <div
                        class="sc-AxirZ iQaTP"
                        height="1em"
                        width="1em"
                      >
                        <svg>
                          btc.svg
                        </svg>
                      </div>
                    </span>
                  </div>
                  <div
                    class="sc-fznyAO hUVUQM relative bg-theme-primary border-theme-primary rotate-90"
                  >
                    <span
                      class="text-sm text-theme-background"
                    />
                    <span
                      class="sc-fzplWN dtBkxc flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent transform  bg-theme-primary-contrast border-theme-primary-contrast text-theme-primary-500"
                    >
                      <div
                        class="sc-AxirZ fttODj"
                        height="10"
                        width="10"
                      >
                        <svg>
                          chevron-down.svg
                        </svg>
                      </div>
                      <span />
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-col flex-1 space-y-5 mt-5"
    >
      <div
        class="sc-fzoLag fvqzEZ"
      >
        <div
          class="container py-16 mx-auto px-14"
        >
          <div
            class="flex items-end justify-between bg-theme-background"
          >
            <div>
              <h1
                class="mb-0 md:text-4xl"
                data-testid="header__title"
              >
                My Registrations
              </h1>
              <div
                class="text-theme-neutral-dark"
                data-testid="header__subtitle"
              >
                You can register a Delagate, Business and Bridgechain.
              </div>
            </div>
            <div>
              <div
                class="flex justify-end divide-theme-neutral-300 space-x-10 divide-x"
              >
                <div
                  class="relative"
                >
                  <button
                    class="h-full my-auto font-semibold cursor-pointer text-theme-primary-light"
                    data-testid="header-search-bar__button"
                  >
                    <div
                      class="flex items-center space-x-3"
                    >
                      <span>
                        Search
                      </span>
                      <div
                        class="sc-AxirZ eEbZjj"
                        height="20"
                        width="20"
                      >
                        <svg>
                          search.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
                <div
                  class="pl-10"
                >
                  <button
                    class="sc-AxjAm ddQVWI"
                    color="primary"
                    type="button"
                  >
                    Register
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Welcome should render properly 1`] = `
<DocumentFragment>
  <div
    class="relative flex flex-col min-h-screen bg-theme-neutral-contrast"
  >
    <nav
      aria-labelledby="main menu"
      class="sc-fzoyAV bqFbiw"
    >
      <div
        class="px-4 sm:px-6 lg:px-"
      >
        <div
          class="relative flex justify-between h-20 md:h-24"
        >
          <div
            class="flex items-center flex-shrink-0"
          >
            <div
              class="flex p-2 mr-4 rounded-lg bg-logo"
            >
              <img
                alt="ARK Logo"
                class="h-6 md:h-8 lg:h-10"
                src="ark-logo.png"
              />
            </div>
            <ul
              class="flex h-20 md:h-24"
            >
              <li
                class="flex"
              >
                <a
                  class="flex items-center mx-4 font-bold text-md text-theme-neutral"
                  href="/profiles/qwe123/dashboard"
                  title="Portfolio"
                >
                  Portfolio
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  class="flex items-center mx-4 font-bold text-md text-theme-neutral"
                  href="/profiles/qwe123/plugins"
                  title="Plugins"
                >
                  Plugins
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  class="flex items-center mx-4 font-bold text-md text-theme-neutral"
                  href="/profiles/qwe123/exchange"
                  title="Exchange"
                >
                  Exchange
                </a>
              </li>
              <li
                class="flex"
              >
                <a
                  class="flex items-center mx-4 font-bold text-md text-theme-neutral"
                  href="/profiles/qwe123/news"
                  title="News"
                >
                  News
                </a>
              </li>
            </ul>
          </div>
          <div
            class="flex items-center"
          >
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="flex items-center h-full px-6 cursor-pointer text-theme-primary-300"
              >
                <div
                  class="sc-AxirZ hmuEJr"
                  height="22"
                  width="22"
                >
                  <svg>
                    notification.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="flex items-center h-full px-6 cursor-pointer text-theme-primary-300"
            >
              <div
                class="sc-AxirZ hmuEJr"
                height="22"
                width="22"
              >
                <svg>
                  sent.svg
                </svg>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="flex items-center h-full px-6 cursor-pointer text-theme-primary-300"
            >
              <div
                class="sc-AxirZ hmuEJr"
                height="22"
                width="22"
              >
                <svg>
                  receive.svg
                </svg>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="p-2 ml-4 text-right"
            >
              <div
                class="text-xs text-theme-neutral"
              >
                Your balance
              </div>
              <div
                class="text-sm font-bold text-theme-neutral-dark"
              />
            </div>
            <div
              class="flex p-1 cusror-pointer"
            >
              <div
                class="relative"
                data-testid="dropdown__toggle"
              >
                <div
                  class="cursor-pointer"
                  data-testid="navbar__useractions"
                >
                  <div
                    class="sc-fznyAO hUVUQM -mr-1 border-theme-neutral-300"
                  >
                    <span
                      class="text-theme-neutral-600"
                    >
                      <div
                        class="sc-AxirZ iQaTP"
                        height="1em"
                        width="1em"
                      >
                        <svg>
                          btc.svg
                        </svg>
                      </div>
                    </span>
                  </div>
                  <div
                    class="sc-fznyAO hUVUQM relative bg-theme-primary border-theme-primary rotate-90"
                  >
                    <span
                      class="text-sm text-theme-background"
                    />
                    <span
                      class="sc-fzplWN dtBkxc flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent transform  bg-theme-primary-contrast border-theme-primary-contrast text-theme-primary-500"
                    >
                      <div
                        class="sc-AxirZ fttODj"
                        height="10"
                        width="10"
                      >
                        <svg>
                          chevron-down.svg
                        </svg>
                      </div>
                      <span />
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-col flex-1 space-y-5 mt-5"
    >
      <div
        class="sc-fzoLag fvqzEZ"
      >
        <div
          class="container py-16 mx-auto px-14"
        >
          <div
            class="flex items-end justify-between bg-theme-background"
          >
            <div>
              <h1
                class="mb-0 md:text-4xl"
                data-testid="header__title"
              >
                My Registrations
              </h1>
              <div
                class="text-theme-neutral-dark"
                data-testid="header__subtitle"
              >
                You can register a Delagate, Business and Bridgechain.
              </div>
            </div>
            <div>
              <div
                class="flex justify-end divide-theme-neutral-300 space-x-10 divide-x"
              >
                <div
                  class="relative"
                >
                  <button
                    class="h-full my-auto font-semibold cursor-pointer text-theme-primary-light"
                    data-testid="header-search-bar__button"
                  >
                    <div
                      class="flex items-center space-x-3"
                    >
                      <span>
                        Search
                      </span>
                      <div
                        class="sc-AxirZ eEbZjj"
                        height="20"
                        width="20"
                      >
                        <svg>
                          search.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
                <div
                  class="pl-10"
                >
                  <button
                    class="sc-AxjAm ddQVWI"
                    color="primary"
                    type="button"
                  >
                    Register
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="sc-fzoLag fvqzEZ"
      >
        <div
          class="container py-16 mx-auto px-14"
        >
          <h2
            class="mb-8 font-bold"
          >
            Business
          </h2>
          <div
            class="sc-fznZeY dcDttg"
            role="table"
          >
            <table
              class="table-auto"
            >
              <thead>
                <tr
                  role="row"
                >
                  <th
                    class="text-sm text-left select-none text-theme-neutral"
                    colspan="1"
                    data-testid="table__th--0"
                    role="columnheader"
                  >
                    <div
                      class="flex flex-inline align-top invisible"
                    >
                      <div>
                        Avatar
                      </div>
                    </div>
                  </th>
                  <th
                    class="text-sm text-left select-none text-theme-neutral"
                    colspan="1"
                    data-testid="table__th--1"
                    role="columnheader"
                  >
                    <div
                      class="flex flex-inline align-top font-semibold text-md"
                    >
                      <div>
                        Agent
                      </div>
                    </div>
                  </th>
                  <th
                    class="text-sm text-left select-none text-theme-neutral"
                    colspan="1"
                    data-testid="table__th--2"
                    role="columnheader"
                  >
                    <div
                      class="flex flex-inline align-top font-semibold text-md"
                    >
                      <div>
                        Business Name
                      </div>
                    </div>
                  </th>
                  <th
                    class="text-sm text-left select-none text-theme-neutral"
                    colspan="1"
                    data-testid="table__th--3"
                    role="columnheader"
                  >
                    <div
                      class="flex flex-inline align-top font-semibold text-md -ml-8"
                    >
                      <div>
                        History
                      </div>
                    </div>
                  </th>
                  <th
                    class="text-sm text-left select-none text-theme-neutral"
                    colspan="1"
                    data-testid="table__th--4"
                    role="columnheader"
                  >
                    <div
                      class="flex flex-inline align-top font-semibold text-md ml-8 -mr-6"
                    >
                      <div>
                        Website
                      </div>
                    </div>
                  </th>
                  <th
                    class="text-sm text-left select-none text-theme-neutral"
                    colspan="1"
                    data-testid="table__th--5"
                    role="columnheader"
                  >
                    <div
                      class="flex flex-inline align-top font-semibold text-md"
                    >
                      <div>
                        MSQ
                      </div>
                    </div>
                  </th>
                  <th
                    class="text-sm text-left select-none text-theme-neutral"
                    colspan="1"
                    data-testid="table__th--6"
                    role="columnheader"
                  >
                    <div
                      class="flex flex-inline align-top font-semibold text-md ml-2"
                    >
                      <div>
                        Repository
                      </div>
                    </div>
                  </th>
                  <th
                    class="text-sm text-left select-none text-theme-neutral"
                    colspan="1"
                    data-testid="table__th--7"
                    role="columnheader"
                  >
                    <div
                      class="flex flex-inline align-top invisible float-right"
                    >
                      <div>
                        Spacer
                      </div>
                    </div>
                  </th>
                  <th
                    class="text-sm text-left select-none text-theme-neutral"
                    colspan="1"
                    data-testid="table__th--8"
                    role="columnheader"
                  >
                    <div
                      class="flex flex-inline align-top invisible float-right"
                    >
                      <div>
                        Options
                      </div>
                    </div>
                  </th>
                </tr>
              </thead>
              <tbody
                role="rowgroup"
              >
                <tr
                  class="border-b border-dashed border-theme-neutral-light"
                  data-testid="business-table__row"
                >
                  <td
                    class="w-24 py-6"
                  >
                    <div
                      class="flex items-center"
                    >
                      <div
                        class="sc-fznyAO hUVUQM border-theme-neutral-800"
                      >
                        <div
                          class="sc-AxirZ hmuEJr"
                          height="22"
                          width="22"
                        >
                          <svg>
                            business.svg
                          </svg>
                        </div>
                      </div>
                      <div
                        class="Avatar__AvatarWrapper-sc-1vsy2s2-0 ikUhMz"
                        data-testid="Avatar"
                      >
                        <div
                          class="w-full h-full"
                        >
                          <img
                            alt="AaAy"
                            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 188, 212)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"70\\" cy=\\"30\\" fill=\\"rgb(233, 30, 99)\\"/><circle r=\\"35\\" cx=\\"90\\" cy=\\"60\\" fill=\\"rgb(63, 81, 181)\\"/><circle r=\\"55\\" cx=\\"50\\" cy=\\"70\\" fill=\\"rgb(156, 39, 176)\\"/></svg>"
                            title="AaAy"
                          />
                        </div>
                      </div>
                    </div>
                  </td>
                  <td
                    class="py-6 mt-1 font-semibold"
                  >
                    <span>
                      OLEBank
                    </span>
                  </td>
                  <td
                    class="py-6 font-semibold"
                  >
                    <span>
                      ARK Ecosystem
                    </span>
                  </td>
                  <td
                    class="py-6 text-bold text-theme-primary"
                  >
                    <span
                      class="-ml-8"
                    >
                      View
                    </span>
                  </td>
                  <td
                    class="py-6 text-theme-neutral-light"
                  >
                    <div
                      class="sc-AxirZ iQaTP ml-12"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        redirect.svg
                      </svg>
                    </div>
                  </td>
                  <td
                    class="py-6 text-bold text-theme-primary"
                  >
                    <div
                      class="sc-AxirZ hmuEJr ml-1"
                      height="22"
                      width="22"
                    >
                      <svg>
                        msq.svg
                      </svg>
                    </div>
                  </td>
                  <td
                    class="py-6 text-bold text-theme-primary"
                  >
                    <span
                      class="ml-3"
                    >
                      View
                    </span>
                  </td>
                  <td
                    class="px-1 px-12"
                  />
                  <td
                    class="flex items-center justify-center float-right py-6 mt-1"
                  >
                    <button
                      class="sc-AxjAm kTAyCf"
                      color="primary"
                      type="button"
                    >
                      <div
                        class="relative"
                        data-testid="dropdown__toggle"
                      >
                        <div
                          class="float-right outline-none cursor-pointer focus:outline-none"
                        >
                          <div
                            class="sc-AxirZ eEbZjj"
                            height="20"
                            width="20"
                          >
                            <svg>
                              settings.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </button>
                  </td>
                </tr>
                <tr
                  class="border-b border-dashed border-theme-neutral-light"
                  data-testid="business-table__row"
                >
                  <td
                    class="w-24 py-6"
                  >
                    <div
                      class="flex items-center"
                    >
                      <div
                        class="sc-fznyAO hUVUQM border-theme-neutral-800"
                      >
                        <div
                          class="sc-AxirZ hmuEJr"
                          height="22"
                          width="22"
                        >
                          <svg>
                            business.svg
                          </svg>
                        </div>
                      </div>
                      <div
                        class="Avatar__AvatarWrapper-sc-1vsy2s2-0 ikUhMz"
                        data-testid="Avatar"
                      >
                        <div
                          class="w-full h-full"
                        >
                          <img
                            alt="AaAy"
                            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 188, 212)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"70\\" cy=\\"30\\" fill=\\"rgb(233, 30, 99)\\"/><circle r=\\"35\\" cx=\\"90\\" cy=\\"60\\" fill=\\"rgb(63, 81, 181)\\"/><circle r=\\"55\\" cx=\\"50\\" cy=\\"70\\" fill=\\"rgb(156, 39, 176)\\"/></svg>"
                            title="AaAy"
                          />
                        </div>
                      </div>
                    </div>
                  </td>
                  <td
                    class="py-6 mt-1 font-semibold"
                  >
                    <span>
                      OLEBank
                    </span>
                  </td>
                  <td
                    class="py-6 font-semibold"
                  >
                    <span>
                      ARK Ecosystem
                    </span>
                  </td>
                  <td
                    class="py-6 text-bold text-theme-primary"
                  >
                    <span
                      class="-ml-8"
                    >
                      View
                    </span>
                  </td>
                  <td
                    class="py-6 text-theme-neutral-light"
                  >
                    <div
                      class="sc-AxirZ iQaTP ml-12"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        redirect.svg
                      </svg>
                    </div>
                  </td>
                  <td
                    class="py-6 text-bold text-theme-primary"
                  >
                    <div
                      class="sc-AxirZ hmuEJr ml-1"
                      height="22"
                      width="22"
                    >
                      <svg>
                        msq.svg
                      </svg>
                    </div>
                  </td>
                  <td
                    class="py-6 text-bold text-theme-primary"
                  >
                    <span
                      class="ml-3"
                    >
                      View
                    </span>
                  </td>
                  <td
                    class="px-1 px-12"
                  />
                  <td
                    class="flex items-center justify-center float-right py-6 mt-1"
                  >
                    <button
                      class="sc-AxjAm kTAyCf"
                      color="primary"
                      type="button"
                    >
                      <div
                        class="relative"
                        data-testid="dropdown__toggle"
                      >
                        <div
                          class="float-right outline-none cursor-pointer focus:outline-none"
                        >
                          <div
                            class="sc-AxirZ eEbZjj"
                            height="20"
                            width="20"
                          >
                            <svg>
                              settings.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </button>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
      <div
        class="sc-fzoLag fvqzEZ"
      >
        <div
          class="container py-16 mx-auto px-14"
        >
          <h2
            class="mb-8 font-bold"
          >
            Blockchain
          </h2>
          <div
            class="sc-fznZeY dcDttg"
            role="table"
          >
            <table
              class="table-auto"
            >
              <thead>
                <tr
                  role="row"
                >
                  <th
                    class="text-sm text-left select-none text-theme-neutral"
                    colspan="1"
                    data-testid="table__th--0"
                    role="columnheader"
                  >
                    <div
                      class="flex flex-inline align-top invisible"
                    >
                      <div>
                        Avatar
                      </div>
                    </div>
                  </th>
                  <th
                    class="text-sm text-left select-none text-theme-neutral"
                    colspan="1"
                    data-testid="table__th--1"
                    role="columnheader"
                  >
                    <div
                      class="flex flex-inline align-top font-semibold text-md"
                    >
                      <div>
                        Agent
                      </div>
                    </div>
                  </th>
                  <th
                    class="text-sm text-left select-none text-theme-neutral"
                    colspan="1"
                    data-testid="table__th--2"
                    role="columnheader"
                  >
                    <div
                      class="flex flex-inline align-top font-semibold text-md"
                    >
                      <div>
                        Blockchain Name
                      </div>
                    </div>
                  </th>
                  <th
                    class="text-sm text-left select-none text-theme-neutral"
                    colspan="1"
                    data-testid="table__th--3"
                    role="columnheader"
                  >
                    <div
                      class="flex flex-inline align-top font-semibold text-md"
                    >
                      <div>
                        History
                      </div>
                    </div>
                  </th>
                  <th
                    class="text-sm text-left select-none text-theme-neutral"
                    colspan="1"
                    data-testid="table__th--4"
                    role="columnheader"
                  >
                    <div
                      class="flex flex-inline align-top font-semibold text-md"
                    >
                      <div>
                        Website
                      </div>
                    </div>
                  </th>
                  <th
                    class="text-sm text-left select-none text-theme-neutral"
                    colspan="1"
                    data-testid="table__th--5"
                    role="columnheader"
                  >
                    <div
                      class="flex flex-inline align-top font-semibold text-md"
                    >
                      <div>
                        MSQ
                      </div>
                    </div>
                  </th>
                  <th
                    class="text-sm text-left select-none text-theme-neutral"
                    colspan="1"
                    data-testid="table__th--6"
                    role="columnheader"
                  >
                    <div
                      class="flex flex-inline align-top font-semibold text-md ml-4"
                    >
                      <div>
                        Repository
                      </div>
                    </div>
                  </th>
                  <th
                    class="text-sm text-left select-none text-theme-neutral"
                    colspan="1"
                    data-testid="table__th--7"
                    role="columnheader"
                  >
                    <div
                      class="flex flex-inline align-top font-semibold text-md -ml-4"
                    >
                      <div>
                        Seed
                      </div>
                    </div>
                  </th>
                  <th
                    class="text-sm text-left select-none text-theme-neutral"
                    colspan="1"
                    data-testid="table__th--8"
                    role="columnheader"
                  >
                    <div
                      class="flex flex-inline align-top invisible float-right"
                    >
                      <div>
                        Spacer
                      </div>
                    </div>
                  </th>
                  <th
                    class="text-sm text-left select-none text-theme-neutral"
                    colspan="1"
                    data-testid="table__th--9"
                    role="columnheader"
                  >
                    <div
                      class="flex flex-inline align-top invisible float-right"
                    >
                      <div>
                        Options
                      </div>
                    </div>
                  </th>
                </tr>
              </thead>
              <tbody
                role="rowgroup"
              >
                <tr
                  class="border-b border-dashed border-theme-neutral-light"
                  data-testid="blockchain-table__row"
                >
                  <td
                    class="w-24 py-6"
                  >
                    <div
                      class="flex items-center"
                    >
                      <div
                        class="sc-fznyAO hUVUQM border-theme-neutral-800"
                      >
                        <div
                          class="sc-AxirZ hmuEJr"
                          height="22"
                          width="22"
                        >
                          <svg>
                            business.svg
                          </svg>
                        </div>
                      </div>
                      <div
                        class="Avatar__AvatarWrapper-sc-1vsy2s2-0 ikUhMz"
                        data-testid="Avatar"
                      >
                        <div
                          class="w-full h-full"
                        >
                          <img
                            alt="1Pdj"
                            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(33, 150, 243)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"60\\" cx=\\"70\\" cy=\\"30\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(103, 58, 183)\\"/><circle r=\\"35\\" cx=\\"60\\" cy=\\"50\\" fill=\\"rgb(244, 67, 54)\\"/></svg>"
                            title="1Pdj"
                          />
                        </div>
                      </div>
                    </div>
                  </td>
                  <td
                    class="py-6 mt-1 font-semibold"
                  >
                    <span>
                      OLEBank
                    </span>
                  </td>
                  <td
                    class="py-6 font-semibold"
                  >
                    <span>
                      ARK Ecosystem
                    </span>
                  </td>
                  <td
                    class="py-6 text-semibold text-theme-primary"
                  >
                    <span>
                      View
                    </span>
                  </td>
                  <td
                    class="py-6 text-theme-neutral-light"
                  >
                    <div
                      class="sc-AxirZ iQaTP ml-4"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        redirect.svg
                      </svg>
                    </div>
                  </td>
                  <td
                    class="py-6 text-semibold text-theme-primary"
                  >
                    <div
                      class="sc-AxirZ hmuEJr ml-1"
                      height="22"
                      width="22"
                    >
                      <svg>
                        msq.svg
                      </svg>
                    </div>
                  </td>
                  <td
                    class="py-6 text-semibold text-theme-primary"
                  >
                    <span
                      class="ml-7"
                    >
                      View
                    </span>
                  </td>
                  <td
                    class="py-6 text-semibold text-theme-primary"
                  >
                    <span
                      class="-ml-5"
                    >
                      View
                    </span>
                  </td>
                  <td
                    class="px-1 px-11"
                  />
                  <td
                    class="flex items-center justify-center float-right py-6 mt-1"
                  >
                    <button
                      class="sc-AxjAm kTAyCf"
                      color="primary"
                      type="button"
                    >
                      <div
                        class="relative"
                        data-testid="dropdown__toggle"
                      >
                        <div
                          class="float-right outline-none cursor-pointer focus:outline-none"
                        >
                          <div
                            class="sc-AxirZ eEbZjj"
                            height="20"
                            width="20"
                          >
                            <svg>
                              settings.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </button>
                  </td>
                </tr>
                <tr
                  class="border-b border-dashed border-theme-neutral-light"
                  data-testid="blockchain-table__row"
                >
                  <td
                    class="w-24 py-6"
                  >
                    <div
                      class="flex items-center"
                    >
                      <div
                        class="sc-fznyAO hUVUQM border-theme-neutral-800"
                      >
                        <div
                          class="sc-AxirZ hmuEJr"
                          height="22"
                          width="22"
                        >
                          <svg>
                            business.svg
                          </svg>
                        </div>
                      </div>
                      <div
                        class="Avatar__AvatarWrapper-sc-1vsy2s2-0 ikUhMz"
                        data-testid="Avatar"
                      >
                        <div
                          class="w-full h-full"
                        >
                          <img
                            alt="1Pdj"
                            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(33, 150, 243)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"60\\" cx=\\"70\\" cy=\\"30\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(103, 58, 183)\\"/><circle r=\\"35\\" cx=\\"60\\" cy=\\"50\\" fill=\\"rgb(244, 67, 54)\\"/></svg>"
                            title="1Pdj"
                          />
                        </div>
                      </div>
                    </div>
                  </td>
                  <td
                    class="py-6 mt-1 font-semibold"
                  >
                    <span>
                      OLEBank
                    </span>
                  </td>
                  <td
                    class="py-6 font-semibold"
                  >
                    <span>
                      ARK Ecosystem
                    </span>
                  </td>
                  <td
                    class="py-6 text-semibold text-theme-primary"
                  >
                    <span>
                      View
                    </span>
                  </td>
                  <td
                    class="py-6 text-theme-neutral-light"
                  >
                    <div
                      class="sc-AxirZ iQaTP ml-4"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        redirect.svg
                      </svg>
                    </div>
                  </td>
                  <td
                    class="py-6 text-semibold text-theme-primary"
                  >
                    <div
                      class="sc-AxirZ hmuEJr ml-1"
                      height="22"
                      width="22"
                    >
                      <svg>
                        msq.svg
                      </svg>
                    </div>
                  </td>
                  <td
                    class="py-6 text-semibold text-theme-primary"
                  >
                    <span
                      class="ml-7"
                    >
                      View
                    </span>
                  </td>
                  <td
                    class="py-6 text-semibold text-theme-primary"
                  >
                    <span
                      class="-ml-5"
                    >
                      View
                    </span>
                  </td>
                  <td
                    class="px-1 px-11"
                  />
                  <td
                    class="flex items-center justify-center float-right py-6 mt-1"
                  >
                    <button
                      class="sc-AxjAm kTAyCf"
                      color="primary"
                      type="button"
                    >
                      <div
                        class="relative"
                        data-testid="dropdown__toggle"
                      >
                        <div
                          class="float-right outline-none cursor-pointer focus:outline-none"
                        >
                          <div
                            class="sc-AxirZ eEbZjj"
                            height="20"
                            width="20"
                          >
                            <svg>
                              settings.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </button>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
      <div
        class="sc-fzoLag fvqzEZ"
      >
        <div
          class="container py-16 mx-auto px-14"
        >
          <h2
            class="mb-8 font-bold"
          >
            Delegate
          </h2>
          <div
            class="sc-fznZeY dcDttg"
            role="table"
          >
            <table
              class="table-auto"
            >
              <thead>
                <tr
                  role="row"
                >
                  <th
                    class="text-sm text-left select-none text-theme-neutral"
                    colspan="1"
                    data-testid="table__th--0"
                    role="columnheader"
                  >
                    <div
                      class="flex flex-inline align-top invisible"
                    >
                      <div>
                        Avatar
                      </div>
                    </div>
                  </th>
                  <th
                    class="text-sm text-left select-none text-theme-neutral"
                    colspan="1"
                    data-testid="table__th--1"
                    role="columnheader"
                  >
                    <div
                      class="flex flex-inline align-top font-semibold text-md"
                    >
                      <div>
                        Delegate Name
                      </div>
                    </div>
                  </th>
                  <th
                    class="text-sm text-left select-none text-theme-neutral"
                    colspan="1"
                    data-testid="table__th--2"
                    role="columnheader"
                  >
                    <div
                      class="flex flex-inline align-top font-semibold text-md -ml-14"
                    >
                      <div>
                        Rank
                      </div>
                    </div>
                  </th>
                  <th
                    class="text-sm text-left select-none text-theme-neutral"
                    colspan="1"
                    data-testid="table__th--3"
                    role="columnheader"
                  >
                    <div
                      class="flex flex-inline align-top font-semibold text-md"
                    >
                      <div>
                        MSQ
                      </div>
                    </div>
                  </th>
                  <th
                    class="text-sm text-left select-none text-theme-neutral"
                    colspan="1"
                    data-testid="table__th--4"
                    role="columnheader"
                  >
                    <div
                      class="flex flex-inline align-top font-semibold text-md"
                    >
                      <div>
                        Status
                      </div>
                    </div>
                  </th>
                  <th
                    class="text-sm text-left select-none text-theme-neutral"
                    colspan="1"
                    data-testid="table__th--5"
                    role="columnheader"
                  >
                    <div
                      class="flex flex-inline align-top invisible w-3 float-right"
                    >
                      <div>
                        Amount
                      </div>
                    </div>
                  </th>
                  <th
                    class="text-sm text-left select-none text-theme-neutral"
                    colspan="1"
                    data-testid="table__th--6"
                    role="columnheader"
                  >
                    <div
                      class="flex flex-inline align-top font-semibold text-md float-right ml-32"
                    >
                      <div>
                        Votes
                      </div>
                    </div>
                  </th>
                </tr>
              </thead>
              <tbody
                role="rowgroup"
              >
                <tr
                  class="border-b border-dashed border-theme-neutral-light"
                  data-testid="delegate-table__row"
                >
                  <td
                    class="w-24 py-6"
                  >
                    <div
                      class="flex items-center"
                    >
                      <div
                        class="sc-fznyAO hUVUQM border-theme-neutral-800"
                      >
                        <div
                          class="sc-AxirZ hmuEJr"
                          height="22"
                          width="22"
                        >
                          <svg>
                            business.svg
                          </svg>
                        </div>
                      </div>
                      <div
                        class="Avatar__AvatarWrapper-sc-1vsy2s2-0 ikUhMz"
                        data-testid="Avatar"
                      >
                        <div
                          class="w-full h-full"
                        >
                          <img
                            alt="APTz"
                            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 188, 212)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"20\\" cy=\\"30\\" fill=\\"rgb(244, 67, 54)\\"/><circle r=\\"40\\" cx=\\"70\\" cy=\\"60\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"70\\" fill=\\"rgb(0, 150, 136)\\"/></svg>"
                            title="APTz"
                          />
                        </div>
                      </div>
                    </div>
                  </td>
                  <td
                    class="py-6 mt-1 font-semibold"
                  >
                    <span>
                      OLEBank
                    </span>
                  </td>
                  <td
                    class="py-6  text-theme-neutral-dark"
                  >
                    <span
                      class="-ml-14"
                    >
                      #2
                    </span>
                  </td>
                  <td
                    class="py-6  text-bold text-theme-primary"
                  >
                    <div
                      class="sc-AxirZ hmuEJr"
                      height="22"
                      width="22"
                    >
                      <svg>
                        msq.svg
                      </svg>
                    </div>
                  </td>
                  <td
                    class="py-6  text-theme-neutral-light"
                  >
                    <div
                      class="sc-AxirZ bMjbpr ml-1 text-theme-success"
                      height="30"
                      width="30"
                    >
                      <svg>
                        checkmark.svg
                      </svg>
                    </div>
                  </td>
                  <td>
                    <div
                      class="flex float-right text-semibold text-theme-neutral-800"
                    >
                      <div
                        class="flex items-center"
                      >
                        <span
                          class="ml-16"
                        >
                          2,450.643 Ѧ
                        </span>
                      </div>
                    </div>
                  </td>
                  <td
                    class="w-1/12 text-semibold text-theme-neutral-800"
                  >
                    <div
                      class="flex items-center ml-5 -mr-10"
                    >
                      <small
                        class="text-theme-neutral"
                      >
                        2,43%
                      </small>
                      <span
                        class="ml-1"
                      >
                        2,450.643 Ѧ
                      </span>
                    </div>
                  </td>
                  <td
                    class="flex items-center justify-center float-right py-6 mt-1"
                  >
                    <button
                      class="sc-AxjAm kTAyCf"
                      color="primary"
                      type="button"
                    >
                      <div
                        class="relative"
                        data-testid="dropdown__toggle"
                      >
                        <div
                          class="float-right outline-none cursor-pointer focus:outline-none"
                        >
                          <div
                            class="sc-AxirZ eEbZjj"
                            height="20"
                            width="20"
                          >
                            <svg>
                              settings.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </button>
                  </td>
                </tr>
                <tr
                  class="border-b border-dashed border-theme-neutral-light"
                  data-testid="delegate-table__row"
                >
                  <td
                    class="w-24 py-6"
                  >
                    <div
                      class="flex items-center"
                    >
                      <div
                        class="sc-fznyAO hUVUQM border-theme-neutral-800"
                      >
                        <div
                          class="sc-AxirZ hmuEJr"
                          height="22"
                          width="22"
                        >
                          <svg>
                            business.svg
                          </svg>
                        </div>
                      </div>
                      <div
                        class="Avatar__AvatarWrapper-sc-1vsy2s2-0 ikUhMz"
                        data-testid="Avatar"
                      >
                        <div
                          class="w-full h-full"
                        >
                          <img
                            alt="APTz"
                            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 188, 212)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"20\\" cy=\\"30\\" fill=\\"rgb(244, 67, 54)\\"/><circle r=\\"40\\" cx=\\"70\\" cy=\\"60\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"70\\" fill=\\"rgb(0, 150, 136)\\"/></svg>"
                            title="APTz"
                          />
                        </div>
                      </div>
                    </div>
                  </td>
                  <td
                    class="py-6 mt-1 font-semibold"
                  >
                    <span>
                      OLEBank
                    </span>
                  </td>
                  <td
                    class="py-6  text-theme-neutral-dark"
                  >
                    <span
                      class="-ml-14"
                    >
                      #352
                    </span>
                  </td>
                  <td
                    class="py-6  text-bold text-theme-primary"
                  >
                    <div
                      class="sc-AxirZ hmuEJr"
                      height="22"
                      width="22"
                    >
                      <svg>
                        msq.svg
                      </svg>
                    </div>
                  </td>
                  <td
                    class="py-6  text-theme-neutral-light"
                  >
                    <div
                      class="sc-AxirZ iQaTP ml-2 text-theme-neutral"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        status-clock.svg
                      </svg>
                    </div>
                  </td>
                  <td>
                    <div
                      class="flex float-right text-semibold text-theme-neutral-800"
                    >
                      <div
                        class="flex items-center"
                      >
                        <span
                          class="ml-16"
                        >
                          2,450.643 Ѧ
                        </span>
                      </div>
                    </div>
                  </td>
                  <td
                    class="w-1/12 text-semibold text-theme-neutral-800"
                  >
                    <div
                      class="flex items-center ml-5 -mr-10"
                    >
                      <small
                        class="text-theme-neutral"
                      >
                        2,43%
                      </small>
                      <span
                        class="ml-1"
                      >
                        2,450.643 Ѧ
                      </span>
                    </div>
                  </td>
                  <td
                    class="flex items-center justify-center float-right py-6 mt-1"
                  >
                    <button
                      class="sc-AxjAm kTAyCf"
                      color="primary"
                      type="button"
                    >
                      <div
                        class="relative"
                        data-testid="dropdown__toggle"
                      >
                        <div
                          class="float-right outline-none cursor-pointer focus:outline-none"
                        >
                          <div
                            class="sc-AxirZ eEbZjj"
                            height="20"
                            width="20"
                          >
                            <svg>
                              settings.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </button>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
